Support functions which return GError

GStreamer has the following method:

  void gst_message_parse_error (
      GstMessage *message,
      GError **error,
      gchar **debug_message);

With this patch, we marshal the GError out parameter as a GObject.GError
exception, but return it rather than throwing it. The test cases cover
two variations on the theme of the function above (one with (transfer
full), as in GStreamer, and another with (transfer none)) as well as a
function with return type GError *.

https://bugzilla.gnome.org/show_bug.cgi?id=666098